@@ -194,6 +194,7 @@ Jython in ways large and small, in no particular order:
     Dominik Broj
     shoaniki (GitHub name)
     Zhihong (Ted) Yu
+    Matthew Schweiss (GitHub: TheMatt2)
 
 Local Variables:
 mode: indented-text
